# ind

./: Cargo.toml  README.md  default.nix  flake.nix
src/: app.rs  main.rs
