[package]
name = "ind"
version = "0.2.2"
edition = "2021"
description = "Run a process and indent its stdout and stderr"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/adam-gaia/ind"
homepage = "https://github.com/adam-gaia/ind"

[dependencies]
commandstream = "0.2.0"
anyhow = "1.0.65"
async-stream = "0.3.3"
clap = { version = "4.0.15", features = ["derive", "cargo"] }
directories-next = "2.0.0"
env_logger = "0.11.0"
log = "0.4.17"
serde = { version = "1.0.147", features = ["serde_derive"] }
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"

